style(header-alignment): Fixed header vertical alignment

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
 header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-bottom: 80px;
 }
 
